css/style.css
body {
    background-image: url("/img/bg.png");
    background-position: bottom;
    background-repeat: repeat-x;
    padding-top: 120px;
    padding-bottom: 40px;
    font-size: 14px;
}

body > .container {
    width: 100%;
    padding: 0;
    margin: 0;
}

.home-content {
    padding: 5px 10px;
}

.span12 {
    padding: 5px 10px;
}

.inner-container {
    min-height: 275px;
}

.navbar-inner {
    min-height: 110px;
    background-color: #dde7ec;
    background-image: url("/img/banner.png");
    background-repeat: no-repeat;
}

.banner-home-link {
    height: 110px;
    width: 320px;
    float: left;
    cursor: pointer;
}

.navbar .container {
    width: auto;
    position: absolute;
    bottom: 5px;
    right: 20px;
    padding: 0 15px;
}
.nav-list > .active > a, .nav-list > .active > a:hover {
    margin-top: 5px;
}
.navbar .nav .active > a, .navbar .nav .active > a:hover,
.navbar .nav li.dropdown.active > .dropdown-toggle, .navbar .nav li.dropdown.active > .dropdown-toggle:hover {
    background-color: #669eb2;
    text-shadow: none;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
}

.navbar .nav > li > a {
    color: #e25027;
    font-size: 15px;
    font-weight: bold;
    text-shadow: none;
    margin: 2px;
}

.navbar .nav > li > a:hover {
    background-color: #669eb2;
    text-shadow: none;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
}

.navbar .btn-navbar, .navbar .btn-navbar:hover {
    background-color: #e25027;
    background-image: none;
    position: absolute;
    top: 0;
    left: 0;
}

.social-menu {
    min-width: 60px;
}

.navbar .nav li.dropdown .dropdown-toggle .caret, .navbar .nav li.dropdown.open .caret {
    border-top-color: inherit;
    border-bottom-color: inherit;
    opacity: 1;
    filter: alpha(opacity=100);
}

.btn-primary {
    background-color: #e25027;
    background-image: -ms-linear-gradient(top, #f27552, #d63a0e);
    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f27552), to(#d63a0e));
    background-image: -webkit-linear-gradient(top, #f27552, #d63a0e);
    background-image: -o-linear-gradient(top, #f27552, #d63a0e);
    background-image: -moz-linear-gradient(top, #f27552, #d63a0e);
    background-image: linear-gradient(top, #f27552, #d63a0e);
    background-repeat: repeat-x;
    border-color: #05C #05C #003580;
    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#f27552', endColorstr='#d63a0e', GradientType=0);
    filter: progid:dximagetransform.microsoft.gradient(enabled=false)
}

.splash {
    background-color: #ffffff;
    max-width: 1280px;
}

.start-header {
    text-align: center;
    margin-bottom: 10px;
}

.splash .lower-image {
    display: none;
    margin: 0 auto;
}

.start-header .start-title {
    color: #45698B;
    font-size: 40px;
    margin-bottom: 20px;
    margin-top: 10px;
}

.start-header p {
    font-size: 20px;
}

/* Content Styles */
.home-content a {
    display: block;
    color: inherit;
    text-decoration: none;
}

.aerogear-list {
    list-style: url("/img/aerogear_icon_16px.png");
}

.aerogear-list li {
    margin-left: 20px;
}


.latest-news {
    border: 2px solid rgba(88,140,165, 1.0);
    background-color: rgba(197, 219, 229, 0.5);
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    margin-bottom: 20px;
    font-size: 14px;
    font-weight: bold;
}

.latest-news > div {
    padding: 5px;
}

.latest-news a {
    display: inline;
    color: #0088CC;
}

.modules {
    text-align: center;
}

.modules .module {
    text-align: center;
    float: none;
    display: inline-block;
    width: 22%;
    border: 2px solid #c3d3e3;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    margin-bottom: 20px;
    padding: 10px;
}

.module img {
    width: 90%;
    max-width: 200px;
}

.download-row > .span6 > .span6 {
    border: 2px solid #c3d3e3;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    margin-bottom: 20px;
}

.span4 > div, .download-row > .span6 > .span6 > div {
    padding: 5px;
}

.span4 .btn {
    display: block;
}

.download-row > .span6 {
    border: none;
}

.download-row > .span6 > .span6 {
    margin-left: 0;
}

.download-row > .span6 > div {
    padding: 0;
}

#repo-container {
    position: relative;
    display: none;
    padding: 20px 0;
    float: right;
    width: 100%;
    margin-top: 10px;
}

#fork-link img {
    z-index: 100;
    position: absolute;
    top: 20px;
    right: 0;
    border: 0;
}

.repo {
    min-height: 115px;
}

.repo li > i {
    position: absolute;
    top: 10px;
    left: 10px;
    font-size: 16px;
}
.repo li.dir .icon-folder-open {
    color: #80a6cd;
}

pre {
    font-size: 10px;
}
.home-content pre {
    margin-left: -40px;
}

.span2 {
    min-height: 1px;
}

.nav-box-left {
    padding: 0;
    border: 1px solid #ccc;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    font-weight: bold;
    color: #aaa;
    position: fixed;
    top: 130px;
    width: 150px;
    background-color: white;
}

.nav-box-left-nested {
    padding: 0;
}

.nav-box > li > a {
    border-top: 1px solid #ccc;
    margin: 0 0 -1px;
    padding: 8px 10px;
}

.nav-box > li > a:first-child {
    border: none;
}

.nav-box > li > a:hover {
    background-color: #c3d3e3;
    color: #444;
}

.nav-box > li > a .icon-chevron-down {
    float: right;
    color: #aaa;
}

.nav-box > li > a:hover .icon-chevron-down {
    color: #444;
}

.nav-box-left-nested > li > a {
    padding: 8px 0 8px 10px;
    margin-left: 20px;
}

.navbar .nav .nav-box .active a {
    color: #fff;
    background-color: #08C;
}

.dropdown-menu a {
    color: #08C;
    font-weight: bold;
}

.download-row {
    margin-left: 0;
}

.download-row > .span6 {
    width: 46%;
}
/* ... */

